better logging for duplicates